@@ -1,6 +1,6 @@
 /*******************************************************************************
 
-    RTD DM5408 Acquisition Card Driver
+    RTD DM5408 Acquisition Card Driver Port for Linux
     Copyright (C) 2010-2011  Abdellah Chelli <abdellahchelli@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
